src/components/footer/footer.scss
footer {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 18vw;
    width: 100%;
    overflow: hidden;
    font-family: var(--font_default);

    .contact {
        width: 100%;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        
        &__socials {
            display: flex;
            gap: 1rem;
            justify-self: center;

            a {
                color: var(--color_font);
            }
        }

        :last-child {
            justify-self: end;
        }
    }

    svg {
        position: absolute;
        top: 2rem;
        height: auto;
        width: 100%;
    }
}

